fixed overflows

--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
   }
 
 	html {
-		/*height: 100%;*/
-		min-height: 800px;
-		overflow: auto;
+		height: 100%;
+		/*min-height: 800px;*/
+		overflow-y: hidden;
 	}
 
   body {
-	/*height: 100%;*/
+	height: 100%;
 	font-family: "Helvetica Neue","HelveticaNeue",Helvetica,Arial,sans-serif;
 	margin: 0 auto;
 	background-repeat: no-repeat;
